src/test/deca/syntax/valid/testFields.deca
// test Declaring a class with fields
// result : OK

class A {
    int x;
    int y;
    float a;
    boolean b = true;
}
