src/test/deca/syntax/invalid/testClassInClass.deca
// define a class inside another class
// Result : Error

class First{
    int x;

    class Second{
        int y;
    }
}
